[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["AtulKumar4 <mittal.atul06@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<3.11"
hsfs =  "^3.0.7"
pandas = ">=1.2.0,<2.0.0"
hopsworks = "^3.2.0"
jupyter = "^1.0.0"
scikit-learn = "^1.3.0"
requests = "^2.31.0"
pyarrow = "^12.0.1"
tqdm = "^4.65.0"
plotly = "^5.15.0"
xgboost = "^1.7.6"
lightgbm = "^3.3.5"
optuna = "^3.2.0"
python-dotenv = "^1.0.0"
streamlit = "^1.24.1"
geopandas = "^0.13.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
watchdog = "^3.0.0"
pip-tools = "^6.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
